multi threading update