@@ -115,7 +115,7 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.5</version>
+                <version>0.0.6</version>
                 <configuration>
                     <mainClass>app/com.ocielgp.RunApp</mainClass>
                     <launcher>gym</launcher>
@@ -134,6 +134,9 @@
 
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=com.jfoenix</option>
 
                         <option>--add-exports</option>
                         <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
